# rust_mono

./: cargo.toml
aoc/: Cargo.toml
aoc/src/: lib.rs  main.rs
aoc/src/y2015/: day01.json  day01.rs  day02.json  day02.rs  mod.rs
blog/src/: main.rs
fizzbuzz/src/: main.rs
