[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
authors = ["Luke Scanlan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
itertools = "0.10.5"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
